# edd_2023_hotchpotch_web_backend

./: .env_sample  Cargo.toml  compose.yml  down.sql
migrations/2023-09-09-025640_hotchpotch/: down.sql  up.sql
migrations/2023-09-09-041115_hotchpotch/: up.sql
migrations/2023-09-09-044305_hotchpotch/: up.sql
src/: auth.rs  cruds.rs  db.rs  main.rs  models.rs  router.rs  schema.orig  schema.rs
