[package]
name = "hotchpotch_web_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
diesel = {version="2.1.1", features = ["postgres", "chrono", "uuid", "r2d2"]}
dotenv = "0.15.0"
