[package]
name = "hotchpotch_web_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = {version = "0.4.30", features = ["serde"]}
diesel = {version="2.0.3", features = ["postgres", "chrono", "uuid", "r2d2"]}
diesel_derives = "2.1.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = {version = "1.0.188", features = ["derive"]}
uuid = {version = "1.4.1", features = ["serde", "v4"]}
